# cpp-container-env

./: CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yaml  readme.md
src/: CMakeLists.txt  main.cpp  myClass.cpp  myClass.hpp
test/: CMakeLists.txt  testMain.cpp  testMyClass.cpp
